--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,20 @@
 <%= require('html-loader!./partials/header.html').default %>
-  <section>
-    <h1>Hero Block title</h1>
-    <p>Hero block description</p>
+  <section class="block hero-block">
+    <h1 class="hero-block-heading">NodePress</h1>
+    <div class="hero-block-content">NodePress is open source software you can use to create a beautiful
+      website, blog, or
+      app</div>
   </section>
-  <section>
-    <div class="card">
-      <h3 class="card-title">NestJS là gì?</h3>
-      <a href="">Category</a>
-      <span>19/01/2022</span>
-      <p>NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api</p>
-      <a href="">Readmore</a>
-    </div>
-    <div class="card">
-      <h3 class="card-title">NestJS là gì?</h3>
-      <a href="">Category</a>
-      <span>19/01/2022</span>
-      <p>NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api</p>
-      <a href="">Readmore</a>
-    </div>
-    <div class="card">
-      <h3 class="card-title">NestJS là gì?</h3>
-      <a href="">Category</a>
-      <span>19/01/2022</span>
-      <p>NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api</p>
-      <a href="">Readmore</a>
-    </div>
-    <div class="card">
-      <h3 class="card-title">NestJS là gì?</h3>
-      <a href="">Category</a>
-      <span>19/01/2022</span>
-      <p>NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api</p>
-      <a href="">Readmore</a>
-    </div>
-    <div class="card">
-      <h3 class="card-title">NestJS là gì?</h3>
-      <a href="">Category</a>
-      <span>19/01/2022</span>
-      <p>NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api</p>
-      <a href="">Readmore</a>
-    </div>
+  <section class="container grid md:grid-cols-2 gap-8">
+    <% for(var i=0; i<12; i++) {%>
+      <div class="card">
+        <h2 class="card-title text-lg font-heading font-semibold">NestJS là gì?</h2>
+        <div><a href="" class="text-sm text-gray-500 hover:text-primary">Category</a></div>
+        <div><span class="text-sm">19/01/2022</span></div>
+        <div class="py-4">NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng dụng web, api.</div>
+        <div class="text-right"><a href="" class="font-bold hover:text-primary">[Readmore]</a></div>
+      </div>
+      <% } %>
   </section>
 
   <%= require('html-loader!./partials/footer.html').default %>
