--- a/src/post.html
+++ b/src/post.html
@@ -33,6 +33,11 @@
         Use this space to tell readers what they should do next. Invite readers to leave a comment, or add a button with
         your main call-to-action, e.g., <strong>Buy Now or Subscribe</strong>.
       </p>
+      <div>
+        <a href="./category.html"
+          class="inline-flex items-center justify-center px-2 py-1 mr-2 text-xs font-bold leading-none text-red-100 bg-red-600 rounded-full">software
+          architecture</a>
+      </div>
     </div>
   </section>
   <%= require('html-loader!./partials/footer.html').default %>
