--- a/src/index.html
+++ b/src/index.html
@@ -35,19 +35,37 @@
         <% } %>
     </div>
   </section>
-  <section class="container section grid md:grid-cols-2 gap-8">
-    <% for(var i=0; i<12; i++) {%>
-      <div class="card card-post">
-        <h3 class="card-post-title">NestJS là gì?</h3>
-        <div><a href="./category.html" class="card-post-category">Category</a>
+  <section class="container section clearfix">
+    <div class="content md:w-2/3 md:float-left">
+      <% for(var i=0; i<12; i++) {%>
+        <div class="card card-post md:flex mb-4">
+          <a href="post.html" class="card-image"><img class="w-96" src="./assets/images/post-image.png"
+              alt="flower sky" /></a>
+          <div class="card-post-meta px-0 mt-2 md:px-4 md:mt-0">
+            <h3 class="card-post-title"><a href="post.html">NestJS là gì?</a></h3>
+            <div><a href="./category.html" class="card-post-category">Category</a>
+            </div>
+            <div><span class="card-post-date">19/01/2022</span></div>
+            <div class="card-post-description">NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng
+              dụng web, api.</div>
+          </div>
         </div>
-        <div><span class="card-post-date">19/01/2022</span></div>
-        <div class="card-post-description">NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng
-          dụng web, api.</div>
-        <div class="text-right"><a href="./post.html" class="card-post-readmore-link">[Readmore]</a>
+        <% } %>
+    </div>
+    <div class="sidebar md:w-1/3 md:float-left">
+      <div class="theiaStickySidebar">
+        <div class="sidebar-widget px-4">
+          <div class="sidebar-widget-title font-heading">HÃY KHÁM PHÁ THÊM CÁC CHỦ ĐỀ THÚ VỊ KHÁC BÊN DƯỚI</div>
+          <div class="sidebar-widget-content p-4 flex flex-wrap flex-row">
+            <% for(var i=0; i<12; i++) {%>
+              <a href="./category.html"
+                class="m-1 p-1 text-xs font-bold leading-none border border-gray-200 bg-white">software
+                architecture</a>
+              <% } %>
+          </div>
         </div>
       </div>
-      <% } %>
+    </div>
   </section>
 
   <%= require('html-loader!./partials/footer.html').default %>
