--- a/src/category.html
+++ b/src/category.html
@@ -4,21 +4,8 @@
   </section>
   <section class="container section grid md:grid-cols-4 gap-8">
     <% for(var i=0; i<8; i++) {%>
-      <div class="card card-post-default">
-        <img class="card-post-image" src="./assets/images/post-image.png" alt="Flower and sky" />
-        <div class="px-6 py-4">
-          <h2 class="card-post-title">NestJS là gì?</h2>
-          <div>
-            <a href="./category.html" class="card-post-category">Category</a>
-          </div>
-          <div><span class="card-post-date">19/01/2022</span></div>
-          <div class="card-post-description">NestJS là 1 framework nodejs sử dụng typescript, hỗ trợ phát triển ứng
-            dụng web, api.</div>
-          <div class="text-right"><a href="./post.html" class="card-post-readmore-link">[Readmore]</a>
-          </div>
-        </div>
-      </div>
-      <% } %>
+      <%= require('html-loader!./partials/card-post-default.html').default %>
+        <% } %>
   </section>
   <section class="container">
     <%= require('html-loader!./partials/pagination.html').default %>
